--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
 <h1>il mio primo viaggio a londra</h1>
 <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="foto londra">
+<img src="./img/pexels-bill-emrich-230794-1.jpg" alt="foto londra">
+<img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto londra">
 </body>
 </html>
