--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="foto londra">
 <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="foto londra">
 <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto londra">
+<h2>le mie spese</h2>
+<table><td>numero</td><td>descrizione</td><td>costo</td></table>
+<table><tr>1</tr><td>1</td><td>biglietto aereo</td>biglietto aereo<td>120<td/td></td>120</td/table> 
+<table><tr>1</tr><td>totale</td>biglietto aereo<td><tr>120</tr><tr></tr><tr/table>
 </body>
 </html>
