--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 <h2>le mie spese</h2>
 <table><td>numero</td><td>descrizione</td><td>costo</td></table>
 <table><tr>1</tr><td>1</td><td>biglietto aereo</td>biglietto aereo<td>120<td/td></td>120</td/table> 
-<table><tr>1</tr><td>totale</td>biglietto aereo<td><tr>120</tr><tr></tr><tr/table>
+<table><tr>1</tr><td\>totale</td>biglietto aereo<td><tr>120</tr><tr></tr><tr/table>
+    
+    <h3>cose da fare</h3>
+    <ul>
+        <li>visitare la tower of london &cross;</li>
+        <li>visitare greenwich &checkmark;</li>
+        <li>ascoltare un artista di strada a convent garden &checkmark;</li>
+        <li>mangiare il tipico fish and chips inglese &cross;</li>
+    </ul>
+    <h4>info utili</h4>
+
+
+
+
+
+
+
+    <h5>le foto</h5>
+    
 </body>
 </html>
