--- a/index.html
+++ b/index.html
@@ -22,15 +22,27 @@
         <li>ascoltare un artista di strada a convent garden &checkmark;</li>
         <li>mangiare il tipico fish and chips inglese &cross;</li>
     </ul>
-    <h4>info utili</h4>
+    <h3>info utili</h3>
+<ol>1 numeri utili di emergenza
+    <ul>999 emergenza</ul>
+    <ul>101 numero polizia</ul>
+    <ul>111 numero assistenza medica</ul>
+</ol>
+<ol>2 hotel
+    <ul>nome hotel: buckingham palace</ul>
+    <ul>indirizzo hotel: westminster, london SW1A 1AA, Regno Unito </ul>
+</ol>
+<ol>3 aereo
+    <ul>volo di andata: YI134X ore 9:30 da milano malpensa</ul>
+    <ul>volo di ritorno: YI236X, ore 18:30 da london Heathrow</ul>
+</ol>
 
 
 
 
 
-
-
-    <h5>le foto</h5>
-    
+    <h3>le foto</h3>
+    <img src="./london1.jpg" alt="foto londra">
+    <img src="./london 2.jpg" alt="foto londra">
 </body>
 </html>
