--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto londra">
 <h2>le mie spese</h2>
 <table><td>numero</td><td>descrizione</td><td>costo</td></table>
-<table><tr>1</tr><td>1</td><td>biglietto aereo</td>biglietto aereo<td>120<td/td></td>120</td/table> 
-<table><tr>1</tr><td\>totale</td>biglietto aereo<td><tr>120</tr><tr></tr><tr/table>
+<table><tr>1</tr><td>1</td><td>biglietto aereo</td>biglietto aereo<td>120&euro;<td/td></td>120&euro;</td/table> 
+<table><tr>1</tr><td\>totale</td>biglietto aereo<td><tr>120&euro;</tr><tr></tr><tr/table>
     
     <h3>cose da fare</h3>
     <ul>
@@ -34,7 +34,7 @@
 </ol>
 <ol>3 aereo
     <ul>volo di andata: YI134X ore 9:30 da milano malpensa</ul>
-    <ul>volo di ritorno: YI236X, ore 18:30 da london Heathrow</ul>
+    <ul>volo di ritorno: YI236X, ore 18:30 da london Heathrowy7u</ul>
 </ol>
 
 
