--- a/index.html
+++ b/index.html
@@ -11,9 +11,37 @@
 <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="foto londra">
 <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto londra">
 <h2>le mie spese</h2>
-<table><td>numero</td><td>descrizione</td><td>costo</td></table>
-<table><tr>1</tr><td>1</td><td>biglietto aereo</td>biglietto aereo<td>120&euro;<td/td></td>120&euro;</td/table> 
-<table><tr>1</tr><td\>totale</td>biglietto aereo<td><tr>120&euro;</tr><tr></tr><tr/table>
+<table>
+    <thead>
+        <tr>
+            <th>Numero</th>
+            <th>Descrizione</th>
+            <th>Costo</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Biglietto aereo</td>
+            <td>120&euro;</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Biglietto aereo</td>
+            <td>120&euro;</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Biglietto aereo</td>
+            <td>120&euro;</td>
+        </tr>
+        <tr>
+            <td>Totale</td>
+            <td></td>
+            <td>360&euro;</td>
+        </tr>
+    </tbody>
+</table>
     
     <h3>cose da fare</h3>
     <ul>
