--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-<h1>il mio primo viaggio a londra</h1>
+<h1>Il mio primo Viaggio a Londra</h1>
 <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="foto londra">
 <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="foto londra">
 <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="foto londra">
-<h2>le mie spese</h2>
+<hr>
+<h2>Le mie spese</h2>
 <table>
     <thead>
         <tr>
@@ -42,34 +43,31 @@
         </tr>
     </tbody>
 </table>
-    
-    <h3>cose da fare</h3>
+    <hr>
+    <h3>Cose da fare</h3>
     <ul>
-        <li>visitare la tower of london &cross;</li>
-        <li>visitare greenwich &checkmark;</li>
-        <li>ascoltare un artista di strada a convent garden &checkmark;</li>
-        <li>mangiare il tipico fish and chips inglese &cross;</li>
+        <li>Visitare la Tower of London &cross;</li>
+        <li>Visitare greenwich &checkmark;</li>
+        <li>Ascoltare un artista di strada a Convent Garden &checkmark;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
     </ul>
-    <h3>info utili</h3>
-<ol>1 numeri utili di emergenza
-    <ul>999 emergenza</ul>
-    <ul>101 numero polizia</ul>
-    <ul>111 numero assistenza medica</ul>
+    <hr>
+    <h3>Info utili</h3>
+<ol>1 Numeri utili di emergenza
+    <ul><strong>999</strong> -Emergenza</ul>
+    <ul><strong>101</strong> -Numero polizia</ul>
+    <ul><strong>111</strong> -Numero assistenza medica</ul>
 </ol>
-<ol>2 hotel
-    <ul>nome hotel: buckingham palace</ul>
-    <ul>indirizzo hotel: westminster, london SW1A 1AA, Regno Unito </ul>
+<ol>2 Hotel
+    <ul><strong>Nome hotel</strong>: Buckingham Palace</ul>
+    <ul><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito </ul>
 </ol>
-<ol>3 aereo
-    <ul>volo di andata: YI134X ore 9:30 da milano malpensa</ul>
-    <ul>volo di ritorno: YI236X, ore 18:30 da london Heathrowy7u</ul>
+<ol>3 Aereo
+    <ul><strong>Volo di Andata</strong>: YI134X ore 9:30 da Milano Malpensa</ul>
+    <ul><strong>Volo di Ritorno</strong>: YI236X, ore 18:30 da London Heathrowy7u</ul>
 </ol>
-
-
-
-
-
-    <h3>le foto</h3>
+<hr>
+    <h3>Le foto</h3>
     <img src="./london1.jpg" alt="foto londra">
     <img src="./london 2.jpg" alt="foto londra">
 </body>
